--- a/EDA-SESSION_1--Basic dataframes.ipynb
+++ b/EDA-SESSION_1--Basic dataframes.ipynb
@@ -23,6 +23,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a14db14d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vaishnavi"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "a4dd2553",
    "metadata": {},
